Display done, now lets finish the final parts - the pages

--- a/css/crunchit.css
+++ b/css/crunchit.css
@@ -752,6 +752,14 @@ span.jPag-snext-img{
   overflow: none;
 }
 
-.table_row {border:solid 1px #FFFFFF;  padding-top:2px;display:table-row}
-.table_col { padding-top:2px;display:table-column}
-.divTable { display:table; width:100%;  border:1px solid  #666666; border-spacing:5px;/*cellspacing:poor IE support for  this*/ /* border-collapse:separate;*/ }
+.table_row {border:solid 1px #FFFFFF;  padding-top:2px;display:table-row, width:560px}
+.table_col1 { display:table-column,width:300px, float:left}
+.table_col2 { display:table-column,width:259px, float:right}
+.divTable { display:table; width:565px;  border:1px solid  #666666; border-spacing:5px;/*cellspacing:poor IE support for  this*/ /* border-collapse:separate;*/ }
+
+.thead1 {width:100%}
+.td1 {colspan:1}
+.th1 {colspan:1}
+
+.tr1 {width:100%}
+
