--- a/css/crunchit.css
+++ b/css/crunchit.css
@@ -773,8 +773,12 @@ span.jPag-snext-img{
 
 .td1 { margin-left: 20px;colspan:1 ; float:left}
 .td2 { float:right}
+.td3 { float:center}
 .td1 .link {font-family:Arial, Helvetica, sans-serif; font-weight:normal; font-size:12px; color:#03638F; text-decoration:underline;}
 
 .ct_para { margin-left: 20px; margin-top:20px; float:left} 
 
 display:table-cell
+
+
+.left_delr {float:left; padding-left:20px;}
